[gd_scene load_steps=16 format=2]

[ext_resource path="res://Objects/Sushi/Sushi_Plate.gd" type="Script" id=1]
[ext_resource path="res://Arts/Sushi/salmon.png" type="Texture" id=2]
[ext_resource path="res://Arts/Scene/sushi_plate.png" type="Texture" id=3]
[ext_resource path="res://Objects/Sushi/Drag_Plate.gd" type="Script" id=4]
[ext_resource path="res://Arts/Particles/explosion.png" type="Texture" id=5]
[ext_resource path="res://Sounds/flip_the_plate.wav" type="AudioStream" id=6]
[ext_resource path="res://Scripts/RandomSFX.gd" type="Script" id=7]
[ext_resource path="res://Sounds/grab.wav" type="AudioStream" id=8]
[ext_resource path="res://Arts/Sushi/sushi_roll_piece.png" type="Texture" id=9]
[ext_resource path="res://Arts/Sushi/nigiri_rice.png" type="Texture" id=10]
[ext_resource path="res://Arts/Sushi/sushi_roll_inside.png" type="Texture" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0001
height = 95.9998

[sub_resource type="CapsuleShape2D" id=2]
radius = 96.0
height = 0.0

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1, 0.18, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Plate:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 52.5 ), Vector2( 0, -700 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Plate:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 160.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Drag_Plate:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -800 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.02, 0.12, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particle:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.06 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="Sushi_Plate" type="Node2D"]
script = ExtResource( 1 )

[node name="Base_Plate" type="Area2D" parent="."]
position = Vector2( -0.002165, 41.5 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base_Plate"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Plate" type="Sprite" parent="."]
position = Vector2( 0, 52.5 )
z_index = 10
texture = ExtResource( 3 )

[node name="Particle" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 35.0816 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 5 )

[node name="Drag_Plate" type="Area2D" parent="."]
z_index = 12
collision_layer = 64
collision_mask = 32
script = ExtResource( 4 )

[node name="Meat" type="Sprite" parent="Drag_Plate"]
position = Vector2( -0.00216675, 10 )
scale = Vector2( 0.464474, 0.474273 )
z_index = 12
texture = ExtResource( 2 )

[node name="Rice" type="Sprite" parent="Drag_Plate"]
position = Vector2( 0, 28.0809 )
scale = Vector2( 0.464474, 0.474273 )
z_index = 11
texture = ExtResource( 10 )

[node name="Rolls" type="Node2D" parent="Drag_Plate"]
visible = false
position = Vector2( 0, 28.0809 )

[node name="Roll3" type="Sprite" parent="Drag_Plate/Rolls"]
position = Vector2( 16.0285, -20.0809 )
z_index = 11
texture = ExtResource( 9 )

[node name="Roll" type="Sprite" parent="Drag_Plate/Rolls"]
position = Vector2( -33.5122, 0 )
z_index = 11
texture = ExtResource( 9 )

[node name="Roll2" type="Sprite" parent="Drag_Plate/Rolls"]
position = Vector2( 25.9519, 13.4191 )
z_index = 11
texture = ExtResource( 9 )

[node name="Top1" type="Sprite" parent="Drag_Plate/Rolls"]
position = Vector2( 16.0285, -20.0809 )
z_index = 11
texture = ExtResource( 11 )

[node name="Top2" type="Sprite" parent="Drag_Plate/Rolls"]
position = Vector2( -33.5122, 0 )
z_index = 11
texture = ExtResource( 11 )

[node name="Top3" type="Sprite" parent="Drag_Plate/Rolls"]
position = Vector2( 25.9519, 13.4191 )
z_index = 11
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drag_Plate"]
position = Vector2( -0.002165, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Drag_Plate"]
anims/pick_up = SubResource( 3 )

[node name="Grab_Sound" type="AudioStreamPlayer2D" parent="Drag_Plate"]
stream = ExtResource( 8 )
bus = "SFX"
script = ExtResource( 7 )

[node name="PlateAnimation" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/flip = SubResource( 4 )

[node name="Flip_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "SFX"
script = ExtResource( 7 )

[connection signal="area_entered" from="Base_Plate" to="." method="_on_Base_Plate_area_entered"]
[connection signal="area_entered" from="Drag_Plate" to="Drag_Plate" method="_on_Drag_Plate_area_entered"]
[connection signal="area_exited" from="Drag_Plate" to="Drag_Plate" method="_on_Drag_Plate_area_exited"]
[connection signal="on_dragging" from="Drag_Plate" to="." method="_on_Sushi_on_dragging"]
[connection signal="on_dragging" from="Drag_Plate" to="Drag_Plate" method="_on_Drag_Plate_on_dragging"]
[connection signal="on_released" from="Drag_Plate" to="." method="_on_Sushi_on_released"]
[connection signal="on_released" from="Drag_Plate" to="Drag_Plate" method="_on_Drag_Plate_on_released"]
[connection signal="animation_finished" from="PlateAnimation" to="." method="_on_PlateAnimation_animation_finished"]
